Removed some unwanted console logs Fixed whitespace issue Added textformatting minor style fixes

--- a/DiceCloud/style.css
+++ b/DiceCloud/style.css
@@ -72,12 +72,16 @@
 
 .dc20-attack {
     position: absolute;
-    right: 0;
+    right: 5px;
     top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
+}
+
+.dc20-attack button {
+    border-right: 1px solid rgba(0,0,0,.12);
 }
 
 .dc20-attack button:first-child {
